views/classy_cate.less
/*
 * Name: Classy CATE
 * Author: Peter Hamilton
 */

.navbar {
  margin-top: 15px;
}

.profile-picture-container {
  max-width: 180px;
}

.profile-image {
  max-width: 120px;
}


a i {
  font-size: 20px;
}

.centered {
  text-align: center;
}

.list-text {
  margin-left: 30px;
}

.list-icon-container {
  float: left
}

.section-header {
  margin-top: 0;
  font-size: 30px;
}

.footer {
  text-align: center;
  padding: 30px 0;
  margin-top: 40px;
  border-top: 1px solid #E5E5E5;
  background-color: whiteSmoke;
}

#old-cate-button-container {
  margin-top: 20px;
}

select {
  width: 150px;
}

.form-horizontal .control-label {
  width: 60px;
}

.form-horizontal .controls {
  margin-left: 80px;
}


th.grade-column {
  width: 20%;
  min-width: 130px
}

#grading-schema-modal {
  width: 300px;
  margin-left: -150px;
  .close {
    margin-top: -5px;
  }
  .progress {
    margin-bottom: 0px;
  }
}

.module_table tr {
  height : 30px;
}

td.id {
  width : 10%;
  text-align : center;
}

td.name {
  width : 35%;
  padding-left : 5px;
}

td.set, td.due, td.spec, td.given {
  text-align : center;
  width : 13.75%;
}

.exercise-navigation-btn i {
  line-height: 20px !important;
}

